--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -15,10 +15,9 @@
 }
 
 .footerLogo {
-  height: 112px;
+  height: 140px;
   width: auto;
   margin-bottom: 16px;
-  border-radius: 10px;
 }
 
 .brandDesc {
